on staging the different slider image shows off the bug that the before padding to align the top link is too much. It currently leaves a white space between nav bar and hero image. Reduce this padding and add a breakpoint so it doesnt change on mobile as there is no fixed menu there. Move the code to inside the header css so it is easier to find, as it relates to the heading.

--- a/wp-content/themes/sydneytheme/src/sass/slider.scss
+++ b/wp-content/themes/sydneytheme/src/sass/slider.scss
@@ -155,7 +155,7 @@
 
         @include breakpoint(tablet) {
             position: absolute;
-            top: 100px;
+            top: 115px;
             right: 120px;
             margin-top: 0;
             max-width: 430px;
